--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,80 @@
-/* Скидання стилів */
 @import url("reset.css");
-
-/* Локальне підключення шрифтів */
 @import url("fonts.css");
+@import url("https://fonts.googleapis.com/css2?family=BBH Sans Bartle:wght@400;700&display=swap");
 
-/* Підключення шрифтів */
-/* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"); */
-/* @import url("https://fonts.googleapis.com/css2?family=Playfair%20Display:wght@400&display=swap"); */
-
-/* Основні стилі */
-
-/* Значення за замовченням  */
 body {
-	font-family: "Roboto", sans-serif;
-	background-color: #333;
-	color: #fff;
-
-	padding: 30px;
+	font-family: BBH Sans Bartle, sans-serif;
+	background-color: #12151a;
+	color: white;
+	font-size: 18px;
 }
 
-.image-x1,
-.image-x2,
-.image-x3 {
-	width: 440px;
+.main-title {
+	text-align: center;
+	font-size: 56px;
+	line-height: 1.3;
+}
+
+picture {
+	display: block;
+}
+
+picture:nth-child(n + 3) {
+	margin-top: 150px;
+	margin-left: 50px;
+}
+
+.flower-img {
+	margin: 0 auto;
+}
+
+.flower-img::after {
+	content: "Design, bitmap, PNG ~ WEBP, AVIF";
+	margin: 0 0 0 50px
+}
+
+.circle-img {
+	margin-left: 50px;
+}
+
+.circle-img::after {
+	content: "Icon, vector, SVG";
+	margin: 0 0 0 50px
+}
+
+img {
+	border-radius: 37px;
+}
+
+.pose::after {
+	content: "Content, bitmap, JPG ~ WEBP, AVIF";
+	margin: 0 0 0 50px;
+}
+
+.right-arrow {
+	margin-left: 150px;
+}
+
+
+
+.right-arrow::after {
+	content: "Icon, bitmap, PNG ~ WEBP, AVIF";
+	font-size: 10px;
+	width: 400px;
+	margin: 0 0 0 50px;
+}
+
+.footer-text {
+	margin-top: 100px;
+	text-align: center;
+	font-size: 14px;
+	font-size: 20px;
+
+}
+
+.footer-text::before {
+	content: "";
+	background-color: #9aa6b2;
+	width: 20px;
+	height: 10px;
 }
