--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=BBH Sans Bartle:wght@400;700&display=swap");
 
 body {
-	font-family: BBH Sans Bartle, sans-serif;
+	font-family: 'BBH Sans Bartle', sans-serif;
 	background-color: #12151a;
 	color: white;
 	font-size: 18px;
