--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url("reset.css");
 @import url("fonts.css");
-@import url("https://fonts.googleapis.com/css2?family=BBH Sans Bartle:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=BBH+Sans+Bartle:wght@400;700&display=swap");
 
 body {
 	font-family: 'BBH Sans Bartle', sans-serif;
